<resources>
    <string name="app_name">OOPS Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash">Splash</string>
    <string name="flat_icon">Flat Icon</string>
    <string name="username">ID: </string>
    <string name="password">Password: </string>
    <string name="title_hint">Title</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
</resources>